# corgi

./: CMakeLists.txt  README.md  launch.sh
devel/: calibration  cpg  foothold  force  imu  legs  odometry
project/: CMakeLists.txt  README.md
project/calibration/: CMakeLists.txt  calibration.cpp  csv_reader.hpp
project/cpg/: CMakeLists.txt  cpg.cpp  cpg.hpp
project/foothold/: CMakeLists.txt  foothold.cpp  foothold.hpp
project/force/: CMakeLists.txt  force_optimizer.cpp  force_optimizer.hpp
project/imu/: CMakeLists.txt  imu.cpp  imu.hpp
project/legs/: CMakeLists.txt  legs.cpp
project/mathematic/: coordinate.hpp  coordinate_transform.hpp  leg_model.hpp  quaternion.hpp  rigid_body.hpp
project/odometry/: CMakeLists.txt  odometry.cpp  odometry.hpp
